# MaD_Firmware

./: CMakeLists.txt
Librarys/DS3231/: DS3231.cpp
Librarys/ForceGauge/: ForceGauge.cpp  ForceGauge.h
Librarys/I2CEncoder/: EncoderTest.cpp  i2cEncoderLibV2.cpp  i2cEncoderLibV2.h
Librarys/IOBoard/: IOBoard.cpp  IOBoard.h
Librarys/MCP23017/: MCP23017.h  MCP23017_Test.cpp
Librarys/NavKey/: NavKeyTest.cpp  i2cNavKey.cpp  i2cNavKey.h
Librarys/RA8876/: DisplayTest.cpp  DisplayTouchTest.cpp  Ra8876_Lite.cpp  Ra8876_Lite.h  pic16bpp_byte.h
include/: Clock.h  Error.h  IOBoard.h  MaD.h  Style.h
src/: AutomaticPage.cpp  Clock.cpp  DateSelection.cpp  IOBoard.cpp  Keyboard.cpp  MaD.cpp  ManualPage.cpp  NavigationPage.cpp  StatusPage.cpp  main.cpp  test.cpp
